# arxiv-summaries-workflow

./: .gitignore  DejaVuSans.pkl  LICENSE  README.md  arxiv-link-downloader.py  arxiv-search-improvements-chat.txt  arxiv-search.py  arxiv_test.py  cleanup.py  config.py  daily-thumbnail.py  generate_newsletter.py  links.txt  most_recent_day_searched.txt  newsletter-podcast.py  open-links.py  open_links.py  papers_downloaded.csv  papers_kept.csv  papers_seen.csv  pyproject.toml  recording.py  requirements.txt  search_terms_exclude.txt  thumbnail.py  timestamp_trimmer.py  timestamps.py
.virtual_documents/: Untitled.ipynb
training_model/: README.md  add_abstract_column.py  merge_csvs.ipynb  papers_dataset.csv  papers_dataset_full copy.csv
