[tool.poetry]
name = "arxiv-summaries-workflow"
version = "0.1.0"
description = "my workflow for automating downloading of arxiv papers"
authors = ["Evin Tunador"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
arxiv = "^2.1.3"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
